# notebooks

./: .env  pyproject.toml
mlflow/: .dockerignore  Dockerfile  compose.yaml  slide.ipynb
